[gd_scene load_steps=4 format=3 uid="uid://yfwujtib4ogb"]

[ext_resource type="Script" path="res://Scenes/landing.gd" id="1_1e1to"]
[ext_resource type="PackedScene" uid="uid://bev1jin6r7t6n" path="res://PraxisMapper/Controls/GetFile.tscn" id="2_llpnn"]
[ext_resource type="Theme" uid="uid://csq6qjiqail4e" path="res://Assets/gametheme.tres" id="3_7iixc"]

[node name="Landing" type="Node2D"]
script = ExtResource("1_1e1to")

[node name="GetFile" parent="." instance=ExtResource("2_llpnn")]
position = Vector2(0, 542)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="sc" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(360, 640)
offset_right = 40.0
offset_bottom = 40.0

[node name="c" type="ColorRect" parent="sc"]
custom_minimum_size = Vector2(360, 920)
layout_mode = 2
mouse_filter = 1
color = Color(0.0223882, 2.67562e-05, 0.0786491, 1)

[node name="Label" type="Label" parent="sc/c"]
layout_mode = 0
offset_left = 2.0
offset_top = 5.0
offset_right = 356.0
offset_bottom = 28.0
theme = ExtResource("3_7iixc")
text = "Pokemon Walk"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="sc/c"]
layout_mode = 0
offset_left = 10.0
offset_top = 27.0
offset_right = 354.0
offset_bottom = 461.0
theme = ExtResource("3_7iixc")
text = "This is a location-based game. You will play by walking around outside and visiting places of interest.

This will require you to grant location permissions to the app from your phone. You can allow the game to download more accurate map data from an external server on demand, which will download a file covering 1 square degree of the globe each time a new file is requested. No other data is collected or sent off your device, including your precise location, at any time by this game.

Once you grant GPS permissions, the \"Start Game\" button will appear at the bottom of the screen. Push that to begin playing!"
autowrap_mode = 3

[node name="btnGPS" type="Button" parent="sc/c"]
layout_mode = 0
offset_left = 81.0
offset_top = 413.0
offset_right = 301.0
offset_bottom = 452.0
theme = ExtResource("3_7iixc")
text = "Grant GPS Permissions"

[node name="btnStart" type="Button" parent="sc/c"]
layout_mode = 0
offset_left = 86.0
offset_top = 732.0
offset_right = 286.0
offset_bottom = 796.0
theme = ExtResource("3_7iixc")
disabled = true
text = "Start Game!"

[node name="Label3" type="Label" parent="sc/c"]
layout_mode = 0
offset_left = 10.0
offset_top = 460.0
offset_right = 355.0
offset_bottom = 558.0
theme = ExtResource("3_7iixc")
text = "This game also downloads data to draw the map while you're playing. Once GPS permisisons are granted, you can download a large file now to save time and bandwidth later."
autowrap_mode = 3

[node name="btnDownloadNow" type="Button" parent="sc/c"]
layout_mode = 0
offset_left = 127.0
offset_top = 601.0
offset_right = 224.0
offset_bottom = 625.0
theme = ExtResource("3_7iixc")
disabled = true
text = "Download"

[node name="lblArea" type="Label" parent="sc/c"]
layout_mode = 0
offset_left = 33.0
offset_top = 569.0
offset_right = 149.0
offset_bottom = 592.0
theme = ExtResource("3_7iixc")
text = "Current Area:"

[node name="RichTextLabel" type="RichTextLabel" parent="sc/c"]
layout_mode = 0
offset_left = 10.0
offset_top = 631.0
offset_right = 352.0
offset_bottom = 726.0
theme = ExtResource("3_7iixc")
theme_override_font_sizes/normal_font_size = 8
text = "This game contains information from [url=https://www.openstreetmap.org/]OpenStreetMap[/url],  which is made available here under the [url=https://opendatacommons.org/licenses/odbl/1-0/]Open Database License (ODbL)[/url].

This data can be extracted from the game's .apk file for use in your own games, subject to the terms. You can get a copy of the offline data built into this game from [url=https://github.com/PraxisMapper/OfflineData/]this Github repo[/url]. You can also use [url=https://github.com/PraxisMapper]PraxisMapper[/url] to generate your own set of data from OSM source data."

[node name="Label4" type="Label" parent="sc/c"]
layout_mode = 0
offset_left = 10.0
offset_top = 823.0
offset_right = 360.0
offset_bottom = 915.0
theme = ExtResource("3_7iixc")
text = "This game is a parody and satire of Pokemon games, and does not claim ownership of any material owned by Nintendo, Game Freak, or The Pokemon Company."
autowrap_mode = 3

[connection signal="button_down" from="sc/c/btnGPS" to="." method="GrantPermission"]
[connection signal="button_down" from="sc/c/btnStart" to="." method="StartGame"]
